Bug 658242 - Search in bookmarks doesn't find javascript: bookmarks. r=dietrich